Adding preview (beta)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,9 +46,12 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.26",
     "input-otp": "1.4.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.11.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
+    "pptx-preview": "^1.0.7",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
@@ -61,6 +64,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "xlsx": "^0.18.5",
     "zod": "3.25.76"
   },
   "devDependencies": {
