--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -20,7 +20,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "libreoffice-convert": "^1.7.0",
     "multer": "^2.0.2",
+    "path-exists": "^5.0.0",
     "pptxgenjs": "^4.0.1",
     "prisma": "5.22.0"
   },
